make sure text is center aligned

--- a/_sass/whiteglass/_base.scss
+++ b/_sass/whiteglass/_base.scss
@@ -183,6 +183,7 @@ pre {
  */
 table.tt, tr.tt, td.tt {
    border: none;
+   text-align: center;
 }
 tr.tt, td.tt {
  padding: 20px;
